--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -34,3 +34,11 @@
         }
     }
 }
+
+@media (max-width: 767px){
+    .button {
+        max-width: 30%;
+        align-items: center;
+        margin:auto
+    }
+}
