--- a/src/components/ColumnForm/ColumnForm.module.scss
+++ b/src/components/ColumnForm/ColumnForm.module.scss
@@ -2,7 +2,7 @@
 
 .columnForm {
         display: flex;
-       
+        flex-wrap: wrap;
       }
       
       .fieldGroup {
@@ -11,22 +11,14 @@
         margin-bottom: 10px;
       }
       
-      .label {
-        
-        padding: 110px;
-      }
-      
-      .input {
+      .columnForm input {
         margin: 10px;
         padding: 15px;
         border-radius: 5px;
         border: none;
       }
 
-      .form {
-        margin: 0 auto;
-        text-align: center;
-      }
+
 
 @media (max-width: 767px) {
         .form {
