--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -35,11 +35,14 @@
       a {
         color: #fff;
         text-decoration: none;
-
-        &:hover {
-          text-decoration: underline;
         }
       }
     }
+    .linkActive {
+        transition: 1s;
+        color: $color-warning;
+    }
+    
   }
-}
+
+
