--- a/src/components/ColumnForm/ColumnForm.module.scss
+++ b/src/components/ColumnForm/ColumnForm.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/settings.scss';
 
 .columnForm {
-        display: flex;
-        flex-wrap: wrap;
+        
+        text-align: center;
       }
       
       .fieldGroup {
