--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,4 +10,15 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
+    color: $color-dark;
 }
+.button {
+    border: none;
+    cursor: pointer;
+    :hover {
+      transform: scale(120%);
+    }
+  }
+  .isActive {
+   color: rgb(255, 102, 0);
+  }
