--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,1 +1,22 @@
+@use "sass:math";
+
 @import '../../styles/settings.scss';
+
+
+.favoriteWrapper {
+    padding: $base-size;
+  }
+
+.cardWrapper {
+  width: calc(33% - 12px);
+  background: $color-light;
+  margin: 0 auto;
+  padding: ($base-size * 1.5);
+  border-radius: $radius;
+  box-shadow: 0 math.div($base-size, 4) 0 rgba(0,0,0,0.3);
+  color: $color-dark;
+}
+
+.card {
+  padding: math.div($base-size, 2) 0;
+}
