--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,24 +1,28 @@
 @import '../../styles/settings.scss';
 
 .card {
-    position: relative;
-    background: $color-light;
-    border: 1px solid lighten($color-dark, 60%);
-    padding: $base-size;
-    margin: 0 0 $base-size 0;
-    border-radius: $radius;
-    display: flex;
-    justify-content: space-between;
-    font-weight: bold;
-    color: $color-dark;
+  position: relative;
+  background: #f0f0f0;
+  border: 1px solid #cccccc;
+  padding: 16px;
+  margin: 0 0 16px 0;
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  color: #333333;
 }
+
 .button {
-    border: none;
-    cursor: pointer;
-    :hover {
-      transform: scale(120%);
-    }
-  }
-  .isActive {
-   color: rgb(255, 102, 0);
-  }
+  border: none;
+  cursor: pointer;
+  background: none; 
+}
+
+.button:hover {
+  transform: scale(1.3);
+}
+
+.favorite {
+  color: rgba(244, 80, 16, 0.89); 
+}
